Closed Bug 1928041 Opened 1 year ago Closed 9 days ago

Firefox doesn't fill the screen when double-clicking the titlebar on macOS (macOS set to "Fill" instead of "Zoom" for that action)

Categories

(Core :: Widget: Cocoa, defect, P3)

Firefox 132
Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
158 Branch
Tracking Status
firefox158 --- fixed

People

(Reporter: u763257, Assigned: spohl)

References

Details

Attachments

(6 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:132.0) Gecko/20100101 Firefox/132.0

Steps to reproduce:

On macOS version Sequoia, Double click on the empty part of tab bar of Firefox (not on tabs), with mac System Settings - "Desktop&Dock" - "Double-click a window's title bar to" set to "fill".

Actual results:

The window does not change.

Expected results:

The window maximizes and fill the screen. An example of this behavior can be found when doing the same action in safari, or the majority of mac apps.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Cocoa' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Cocoa
Product: Firefox → Core

While I'm able to reproduce this, it also doesn't seem to work for other apps such as Safari. Could you double-check that this does indeed work for you in Safari? If you set it to "Zoom" instead of "Fill", do any of the apps behave differently?

Severity: -- → S3
Flags: needinfo?(inks.baggage-0f)
Priority: -- → P3

(In reply to Stephen A Pohl [:spohl] from comment #2)

While I'm able to reproduce this, it also doesn't seem to work for other apps such as Safari. Could you double-check that this does indeed work for you in Safari? If you set it to "Zoom" instead of "Fill", do any of the apps behave differently?

Could you double-check that this does indeed work for you in Safari?
Yes It works in Safari, and I checked Chrome too just in case and It also works in that browser. Sorry I am new to this and don't know how to upload a video.

If you set it to "Zoom" instead of "Fill", do any of the apps behave differently?
Never thought about that! I tried this and Safari zooms in a bit to a size that apple thinks display all the current webpage the best, to be honest I never understand the logic behind this. Chrome just maximizes. And Firefox, strangely, maximizes this time too!

Flags: needinfo?(inks.baggage-0f)

I believe that what you're looking for is the "Zoom" setting. I cannot get other apps to do anything when the setting is on "Fill".

(In reply to Stephen A Pohl [:spohl] from comment #4)

I believe that what you're looking for is the "Zoom" setting. I cannot get other apps to do anything when the setting is on "Fill".

Sorry I think I should be more specific. What I want is the window stays a window and not going into fullscreen but the window streches to fill all the space under menubar. And all the my previous actions are performed on a windows thats does not fill all the space under menubar. If you do that can you see the outcome now?

(In reply to Poudre from comment #5)

(In reply to Stephen A Pohl [:spohl] from comment #4)

I believe that what you're looking for is the "Zoom" setting. I cannot get other apps to do anything when the setting is on "Fill".

Sorry I think I should be more specific. What I want is the window stays a window and not going into fullscreen but the window streches to fill all the space under menubar. And all the my previous actions are performed on a windows thats does not fill all the space under menubar. If you do that can you see the outcome now?

Are you saying that if you set the setting to "Zoom" that the window is going into fullscreen? I am not seeing this. For me, "Zoom" expands the window exactly as you desire, below the menubar and above the Dock.

Flags: needinfo?(inks.baggage-0f)

(In reply to Stephen A Pohl [:spohl] from comment #6)

(In reply to Poudre from comment #5)

(In reply to Stephen A Pohl [:spohl] from comment #4)

I believe that what you're looking for is the "Zoom" setting. I cannot get other apps to do anything when the setting is on "Fill".

Sorry I think I should be more specific. What I want is the window stays a window and not going into fullscreen but the window streches to fill all the space under menubar. And all the my previous actions are performed on a windows thats does not fill all the space under menubar. If you do that can you see the outcome now?

Are you saying that if you set the setting to "Zoom" that the window is going into fullscreen? I am not seeing this. For me, "Zoom" expands the window exactly as you desire, below the menubar and above the Dock.

Oh I thought because I used the word "maximize" You think the app should go into fullscreen and you told me the fill does not work in any apps which is werid because this is like the new feature of sequoia. Anyway I found a youtube video, https://www.youtube.com/watch?v=CiUyWkrDq5Q from 2:29-3:36. This is the expected behavior. I don't know why It does not work on your machine because I just updated and changed the setting and It works in all apps besides Firefox. I also found this github issue from a Firefox fork https://github.com/zen-browser/desktop/issues/1156. It seems other people are having this problem too.

Flags: needinfo?(inks.baggage-0f)

Could you confirm that you do not use any other window sizing or snapping tools? Unfortunately, I'm still unable to reproduce this on my end.

Flags: needinfo?(inks.baggage-0f)

(In reply to Stephen A Pohl [:spohl] from comment #8)

Could you confirm that you do not use any other window sizing or snapping tools? Unfortunately, I'm still unable to reproduce this on my end.

Yes, I can confirm. I used to use Swish to snap window but since the update to sequoia I deleted It because of the introduction of the built-in feature. You say you cannot reproduce it, do you mean just the double click to fill part or all built-in snapping features? Does keyboard shortcuts or move window to screen edge to snap work for you?

Flags: needinfo?(inks.baggage-0f)
Duplicate of this bug: 1932417

I am also experiencing this issue on Sequoia.

All built-in apps function as expected, filling the screen (excluding some padding around the app window) when the title bar is double clicked.

A list of third party apps which seem to respect this behaviour:

  • DBeaver
  • Postman
  • Google Chrome
  • VSCode
  • Microsoft Word
  • Microsoft Excel
  • Microsoft Powerpoint
  • FileZilla

A list of third party apps that I've tried and do not respect this behaviour:

  • Microsoft Outlook - Double click title bar does nothing
  • Microsoft Teams - Double click uses "Zoom" behaviour even when set to "Fill"
  • Microsoft Powerpoint - Double click title bar does nothing
  • Warp terminal - Double click title bar does nothing

Apologies, error in my previous comment. To clarify, double-click to fill does not work in Microsoft Powerpoint

I'm having this same problem and it's making firefox unusable on macos, as window management is too cumbersome.

I can reproduce this on Firefox Developer 137.0b9 (aarch64) on macOS 15.2. Setting the system setting 'Double-click a window's title bar to' to 'Fill' results in nothing happening when double-clicking Firefox's titlebar. With the system setting set to 'Zoom' or 'Minimize', Firefox zooms or minimizes when double-clicking.

Note that the 'Fill' and the 'Zoom' setting do different things, even if they seem similar. 'Fill' fills the screen using the new macOS window tiling feature, meaning that there may be a margin left around the window (if the user has enabled 'Tiled windows have margins'), and dragging the window will revert automatically to the previous size.

Double-clicking the titlebar when the system setting is set to 'Fill' should have the same effect as selecting Window > Fill (which does work in Firefox) or dragging the window to the menu bar (if enabled in system settings).

Also having this issue on 137.0 (aarch64), on macOS Sequoia 15.3. Not sure when this started happening but I'm sure this used to work normally for me? So quite frustrating when using Firefox.

In macOS Settings app > Window Tiling > 'Double-click a window's title bar to' is set to 'Fill'

Functionality works normally on other apps including Safari, Messages, Notes.

I can also kind of reproduce this on 138.0.1 (aarch64), on macOS Sequoia 15.4.1.
But we need to be careful here what we call 'titlebar': The real, native titlebar of Firefox can be hidden, e.g. by right-clicking in the empty space next to the window buttons > Customize Toolbar... > unchecking 'Title Bar' in the bottom left. I think, it is disabled by default on macOS.
When I enable it and double click on it, I get the expected behavior, whatever is configured in the macOS Settings.

So the actual problem is, that Firefox doesn't mimic the behavior of double clicking the native titlebar, when it is disabled and therefore the topmost, double clicked bar is actually the tab bar (or the nav bar when using vertical tabs).

I can confirm this issue as well. The only workaround is to enable the titlebar and double click on it.

Duplicate of this bug: 1983624

Here is the macOS User Guide entry that describes what 'fill' is: https://support.apple.com/guide/mac-help/change-desktop-dock-settings-mchlp1119/15.0/mac/15.0, unfortunately it doesn't describe zoom.

What I've seen other places is fill means take up the entire screen except the menu bar and dock, so if the dock is at the bottom of the screen, then the window should be edge to edge horizontally, and menu bar to dock vertically. If the dock is on a side, then it should be dock to edge (or edge to dock) horizontally and menu bar to edge vertically. Toggling fill should switch between the size and position before the first fill and the fill position.

What I've seen for zoom is it should enlarge to fit the content of the window (so there is no scroll bars), with a maximum of the fill size. Toggle would be similar, between the size and position before the first zoom and the zoom size and position. Some apps only zoom vertically, I've added a video of Safari in zoom mode as an example of this.

I attached a video with Safari with the fill setting turned on. It maximizes to fill the screen, however, it doesn't return to the same size and position with another double-click, instead it switches back to the same size when you drag the titlebar.

This is Chrome's behavior on the fill setting, same as Safari, it fills the screen on the first double-click and nothing on the second. It returns to it's previous size when the titlebar is dragged.

Here is Chrome with the zoom setting. It fills the whole screen when double-clicked the first time, and returns to it's size and position when double-clicked the second time.

Duplicate of this bug: 2002299
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Unspecified → macOS
Hardware: Unspecified → Desktop
Summary: Firefox doesn't fill the screen when double-clicking the titlebar on macOS Sequoia → Firefox doesn't fill the screen when double-clicking the titlebar on macOS (macOS set to "Fill" instead of "Zoom" for that action)

My guess was that this bug is just present because the Firefox code for the top bar (the non-native bar where the macOS traffic lights and the tabs live) is not yet updated to support this new "fill" on double click option introduced with macOS Sequoia. The soure code of nsCocoaWindow.mm looks like this.

I worked with claude to let it analyze the issue and it came up with the attached patch (firefox-titlebar-fill-doubleclick.patch).

Unfortunately, I don't have any experience and the necessary setup to try this patch out locally and create a pull request with all the necessary tests, etc.

So, hopefully, somebody with more experience could take over and maybe use the patch as a starting point for a proper fix.

Duplicate of this bug: 2067519

macOS 15 added "Fill" as a third choice for "Double-click a window's title bar to", next to "Zoom" and "Minimize". We hide the native titlebar and run the action ourselves when a double click lands in one of our draggable regions, and we only knew about the other two, so nothing happened.

Based on the patch that darlaes attached in attachment 9613843 [details] [diff] [review].

Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED

There is an r+ patch which didn't land and no activity in this bug for 1 week.
:spohl, could you have a look please?
If you still have some work to do, you can add an action "Plan Changes" in Phabricator.
For more information, please visit BugBot documentation.

Flags: needinfo?(spohl.mozilla.bugs)
Flags: needinfo?(mstange.moz)
Pushed by spohl@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/808516c30b36 https://hg.mozilla.org/integration/autoland/rev/adfd4627874c Run the macOS 15 "Fill" action on a titlebar double click. r=mac-reviewers,mstange
Status: ASSIGNED → RESOLVED
Closed: 9 days ago
Resolution: --- → FIXED
Target Milestone: --- → 158 Branch
Flags: needinfo?(spohl.mozilla.bugs)
Flags: needinfo?(mstange.moz)
QA Whiteboard: [qa-ver-opt-c159/b158]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: