Bug 1928041: Run the macOS 15 "Fill" action on a titlebar double click. r=mac-reviewers,mstange

macOS 15 added "Fill" as a third choice for "Double-click a window's title bar to", next to "Zoom" and "Minimize". We hide the native titlebar and run the action ourselves when a double click lands in one of our draggable regions, and we only knew about the other two, so nothing happened.

Based on the patch that darlaes attached in attachment 9613843.

Differential Revision: https://phabricator.services.mozilla.com/D322617